changed the constraint file

--- a/counter.runs/impl_1/.vivado.begin.rst
+++ b/counter.runs/impl_1/.vivado.begin.rst
@@ -8,3 +8,13 @@
     <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="28464" HostCore="12" HostMemory="07851732992">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="35056" HostCore="12" HostMemory="07851732992">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="13444" HostCore="12" HostMemory="07851732992">
+    </Process>
+</ProcessHandle>
