i added last_state to check to prevent mulitple presses per click

--- a/counter.runs/impl_1/.vivado.begin.rst
+++ b/counter.runs/impl_1/.vivado.begin.rst
@@ -18,3 +18,13 @@
     <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="2576" HostCore="12" HostMemory="07851732992">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="25180" HostCore="12" HostMemory="07851732992">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ibuku" Host="IBUKUN" Pid="18608" HostCore="12" HostMemory="07851732992">
+    </Process>
+</ProcessHandle>
